# rocket_program_sdl

./: .gitignore  CMakeLists.txt  README.md
game/: config.hpp  main.cpp
game/bundles/elementary/: scene.hpp
game/bundles/math/: mathy.hpp
game/bundles/render/: square.hpp  texture.hpp
program/: config.hpp  main.cpp
src/: config.h  config.hpp  connection.hpp  main.cpp  mathy.hpp  program.hpp  skarabeusz.hpp
src/game_elements/: connection.hpp  skarabeusz.hpp
src/source/math/: mathy.h  mathy.hpp
src/source/render/: objects.hpp  square.h  square.hpp  texture.h  texture.hpp
